Fix css imagen z-index

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -22,8 +22,7 @@
 }
 
 .hero-info {
-    &.dark { background: $clr-primary-10-dark; }
-    &.light { background: $clr-primary-10; }
+    z-index: 2;
 }
 
 .home-profesion {
